# flask_code-image-generator

./: app.py  app_1.py  pyproject.toml  utils.py
static/: styles.css
templates/: base.html  code_input.html  image.html  style_selection.html
utils/: generate_app_secret_key.py
