[tool.poetry]
name = "image-generator-playwright"
version = "0.1.0"
description = ""
authors = ["trailtony"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
playwright = "^1.46.0"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
